# RotS_Live_Modern

./: .clang-tidy  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.x64  FEATURES.md  Makefile  README.md  WIP.md  docker-compose.yml
.claude/: settings.json
.github/workflows/: ci.yml
docs/: BUILD.md  README.md  security-notes.md  shape_mob.md  shape_mudlle.md  shape_object.md  shape_room.md  shape_script.md  shape_zone.md  wizset.md  wizutil.md
docs/data-formats/: maze-files.md  mudlle-and-scripts.md  object-rent-files.md  player-save.md  shop-files.md  socials-and-messages.md  text-tables.md  world-files.md
docs/guides/: warrior-equipment-bis.md
docs/guides/tools/: analysis_output.txt  mine.py  rps_duel.py  rps_output.txt  warrior_bis.py  wbis.py
docs/superpowers/: combat-migration-playbook.md  location-read-allowlist.md  ownership-map.md  phase4-seed-64bit-cosmetic.md  string-view-exceptions.md
docs/superpowers/goldens/: boot-log.golden
docs/superpowers/plans/: 2026-07-06-phase-0-merge-and-characterization.md  2026-07-06-phase-1-build-system-and-ci.md  2026-07-06-phase-2a-json-only-persistence.md  2026-07-07-corrupt-legacy-recovery.md  2026-07-07-phase-2b-64bit-runtime-and-macos.md  2026-07-07-phase-3-windows-platform-layer.md  2026-07-09-phase-4-wave-1-foundations.md  2026-07-09-upstream-account-management-merge.md  2026-07-10-phase-4-wave-2.md  2026-07-10-upstream-sync-validation.md  2026-07-11-phase-4-wave-3-giants.md  2026-07-12-phase-4-wave-4-trio.md  2026-07-12-phase-5-hardening.md  2026-07-13-agent-instructions-consolidation.md  2026-07-13-backlog-cleanup.md  2026-07-13-raii-lifecycle-audit.md  2026-07-13-repository-string-view-first-pass.md  2026-07-13-string-view-text-output.md  2026-07-14-string-view-perf-remediation.md  2026-07-15-format-tier2.md  2026-07-15-format-to-tier1.md  2026-07-15-phase1-fp-unification.md  2026-07-16-library-skeleton-foundation.md  (+21 more)
docs/systems/: class-system.md  cleric-mystic-system.md  combat-loop.md  combat-stat-examples.md  communication-and-socials.md  guardian-spirits.md  magic-system.md  mob-ai-and-specprocs.md  movement-and-zones.md  mudlle-engine.md  objects-and-equipment.md  pk-and-fame.md  races.md  random-number-generation.md  ranger-skills.md  shape-olc-builder.md  shops-and-economy.md  specializations.md  stats-and-character-power.md  time-and-weather.md  weapons.md  xp-and-leveling.md
lib/text/: wizh_tbl
release-notes/: README.md
release-notes/1.5.9/: README.md
scripts/: boot-golden.sh  combat-golden.sh  i386-battery.sh  import-world-data.sh  rots-docker.sh
src/: CMakeLists.txt  CMakePresets.json  Makefile  account_cache.cpp  account_cache.h  account_management.cpp  account_management_assets.cpp  account_management_assets.h  account_management_identity.cpp  account_management_identity.h  account_management_internal.cpp  account_management_migration.cpp  account_management_migration.h  account_management_presentation.cpp  account_management_presentation.h  account_management_storage.cpp  account_management_storage.h  account_management_types.h  act_comm.cpp  act_info.cpp  act_move.cpp  act_obj1.cpp  act_obj2.cpp  act_offe.cpp  act_othe.cpp  act_soci.cpp  act_wiz.cpp  ban.cpp  big_brother.cpp  big_brother.h  boards.cpp  boards.h  boards_json.cpp  char_utils.cpp  char_utils.h  char_utils_combat.cpp  char_utils_combat.h  character_json.cpp  character_json.h  clerics.cpp  (+122 more)
src/app/: act_info.cpp  act_obj2.cpp  act_offe.cpp  act_othe.cpp  ban.cpp  big_brother.cpp  color.cpp  comm.cpp  interpre.cpp  mail.cpp  modify.cpp  protocol.cpp  savebench.cpp  shop.cpp  utility.cpp
src/combat/: battle_mage_handler.cpp  clerics.cpp  fight.cpp  limits.cpp  mage.cpp  mystic.cpp  olog_hai.cpp  ranger.cpp  skill_timer.cpp  spell_pa.cpp  visibility.cpp  weapon_master_handler.cpp
src/core/include/rots/core/: character.h  descriptor.h  fwd.h  object.h  room.h  tables.h  types.h
src/entity/: char_utils.cpp  char_utils_combat.cpp  entity_lifecycle.cpp  environment_utils.cpp  equipment.cpp  object_utils.cpp  placement.cpp
src/olc/: shapemdl.cpp  shapemob.cpp  shapeobj.cpp  shaperom.cpp  shapescript.cpp  shapezon.cpp
src/pathfind/: graph.cpp
src/persist/: account_management_identity.cpp  account_management_migration.cpp  character_json.cpp  db_players.cpp  legacy_salvage.h  objects_json.cpp
src/persist/include/rots/persist/: file_formats.h
src/platform/: clock.cpp  clock.h  json_utils.cpp  player_file_finalize.cpp  rots_log.cpp  rots_rng.cpp  rots_util.cpp  safe_template.cpp
src/platform/include/rots/platform/: log.h  numbered_name.h
src/script/: mobact.cpp  mudlle.cpp  mudlle2.cpp  script.cpp  spec_ass.cpp  spec_pro.cpp
src/tests/: CharPlayerDataBuilder.h  Makefile  ObjFlagDataBuilder.h  account_cache_tests.cpp  account_management_assets_header_compile.cpp  account_management_identity_header_compile.cpp  account_management_migration_header_compile.cpp  account_management_presentation_header_compile.cpp  account_management_storage_header_compile.cpp  account_management_tests.cpp  account_management_types_header_compile.cpp  act_comm_alias_tests.cpp  act_format_tests.cpp  act_info_format_tests.cpp  act_wiz_format_tests.cpp  act_wiz_tests.cpp  asio_smoke_tests.cpp  battle_mage_handler_tests.cpp  big_brother_hooks_tests.cpp  boards_json_tests.cpp  char_utils_tests.cpp  character_json_tests.cpp  characterization_combat_tests.cpp  characterization_json_tests.cpp  clock_tests.cpp  color_tests.cpp  combat_hooks_tests.cpp  combat_linkcheck_main.cpp  comm_act_tests.cpp  comm_delay_tests.cpp  comm_output_tests.cpp  convert_exploits_tests.cpp  convert_plrobjs_tests.cpp  core_linkcheck_main.cpp  cpp20_format_smoke_tests.cpp  damage_test_context.h  damage_tests.cpp  db_loader_tests.cpp  db_save_roundtrip_tests.cpp  editor_hooks_tests.cpp  (+75 more)
src/tests/goldens/: character_seed_fixture.json  combat_transcript_seed42.txt
src/world/: db_world.cpp  weather.cpp  zone.cpp
tools/: account_smoke.py  account_smoke_tests.py  combat_smoke.py  location_read_census.py  string_view_census.py  string_view_census_tests.py
(+32 files in other folders)
